--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
+    "react-fetch-hook": "^1.9.5",
     "react-select": "^5.7.0"
   },
   "devDependencies": {
