Update the ErrorScreen UI

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-fetch-hook": "^1.9.5",
+    "react-icons": "^4.7.1",
     "react-select": "^5.7.0"
   },
   "devDependencies": {
